# TeXicode

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  demo.py  demo_alignment.py  demo_overset.py  example.md  pyproject.toml  run_tests.py  txc
.claude/: settings.local.json
.github/: copilot-instructions.md
bug/: input.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/equation_tags_20260312/: metadata.json  plan.md
conductor/archive/graceful_degradation_20260313/: plan.md  spec.md
conductor/archive/markdown_mode_20260313/: index.md  spec.md
conductor/archive/operator_spacing_audit_20260313/: index.md  metadata.json  plan.md  spec.md
conductor/archive/operator_spacing_fix_20260313/: index.md  metadata.json  plan.md  spec.md
conductor/archive/overset_20260312/: plan.md
docs/: common-instructions.md  math.md  operator_spacing.md  operator_spacing_v2.md  required-features.md
docs/features/: 01-matrix-environments.md  02-alignment-environments.md  03-overset-underset-braces.md  04-equation-tags.md  05-styling-commands.md  06-graceful-degradation.md  07-spacing-and-operators.md  08-markdown-mode.md
examples/: matrix_equations.md
src/: arts.py  lexer.py  main.py  node_data.py  parser.py  pipeline.py  renderer.py  symbols_art.py  test_align.py
temp/: markdown_mode_proto.py  prototype_tag.py
tests/: complex_markdown_test.md  test_data.py  test_iff.md  test_markdown.py  test_matrix.py  test_operator_spacing.py  test_overset.py  test_regression.py  test_styling.py  test_tag.py
(+23 files in other folders)
